--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -16,7 +16,7 @@
 		<form class="search-bar w-search notification-list friend-requests none">
 			<div class="form-group with-button">
 				<input class="Search_people" placeholder="Searsch here people or pages..." type="text">
-				<button>
+				<button href="#" class="loupe">
 					<svg class="olymp-magnifying-glass-icon">
 						<use xlink:href="/svg-icons/sprites/icons.svg#olymp-magnifying-glass-icon"></use>
 					</svg>
