start for search page

--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -5,8 +5,8 @@
 <div class="container">
 	<div class="row">
 		<div class="col-6">
-			<div class="ui-block">
-				<div>
+			<div class="ui-block p-3">
+				<!-- <div>
 					<form id="search_form">
 						<div class="form-group with-button">
 							<input class="Search_p" placeholder="Searsch here people or pages..." type="text">
@@ -17,7 +17,7 @@
 							</button>
 						</div>
 					</form>
-				</div>
+				</div> -->
 
 				<div class="ui-block-title">
 					<h6 class="title">Search results</h6>
@@ -35,8 +35,120 @@
 					</ul>
 			</div>
 		</div>
-		<div class="col-6">
-			some filters
+		<div class="col-6 ui-block">
+			<div class="row">
+				<div class="col-6 pt-3 pl-3">
+					<div class="form-group label-floating is-select ">
+						<label class="control-label">Sort by</label>
+						<select name="sort_by" class="selectpicker form-control mb-0" style="background-color: white;">
+							<option
+									value="age">Age
+							</option>
+							<option
+									value="location">Location
+							</option>							
+							<option
+									selected
+									value="rating">Rating
+							</option>
+							<option
+									value="age">Shared tags
+							</option>
+						</select>
+					</div>
+
+				</div>
+				<div class="col-6 pt-3">
+					<button class="btn btn-primary mt-2">clear all filters</button>
+				</div>
+			
+				<div class="col-12 text-center">
+					<div class="text-center">
+						<h6 class="title">Filters</h6>
+					</div>
+				</div>
+				<div class="col-12">
+					<div class="row">
+						<div class="col-3 pt-3">
+							<h5>Age range</h5>
+						</div>
+						<div class="col-4">
+							<div class="form-group label-floating">
+										<label class="control-label">Minimum</label>
+										<input name="firstName" class="form-control" placeholder="" type="text">
+									</div>
+						</div>
+						<div class="col-4">
+							<div class="form-group label-floating">
+										<label class="control-label">Maximum</label>
+										<input name="firstName" class="form-control" placeholder="" type="text">
+									</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-12">
+					<div class="row">
+						<div class="col-3 pt-3">
+							<h5>Rating range</h5>
+						</div>
+						<div class="col-4">
+							<div class="form-group label-floating">
+										<label class="control-label">Minimum</label>
+										<input name="firstName" class="form-control" placeholder="" type="text">
+									</div>
+						</div>
+						<div class="col-4">
+							<div class="form-group label-floating">
+										<label class="control-label">Maximum</label>
+										<input name="firstName" class="form-control" placeholder="" type="text">
+									</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-12">
+					<div class="row">
+						<div class="col-3 pt-3">
+							<h5>Location</h5>
+						</div>
+						<div class="col-4">
+							<div class="form-group label-floating">
+										<label class="control-label">??</label>
+										<input name="firstName" class="form-control" placeholder="" type="text">
+									</div>
+						</div>
+						<div class="col-4">
+							<div class="form-group label-floating">
+										<label class="control-label">??</label>
+										<input name="firstName" class="form-control" placeholder="" type="text">
+									</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-12">
+					<div class="row">
+						<div class="col-3 pt-3">
+							<h5>Tags</h5>
+						</div>
+						<div class="col-7">
+							<div class="form-group label-floating">
+										<label class="control-label">Tag name</label>
+										<input name="firstName" class="form-control" placeholder="" type="text">
+									</div>
+						</div>
+						<div class="col-2 mt-2">
+							<button class="btn btn-primary">+</button>
+						</div>
+						<div class="col-3"></div>
+						<div class="col-9">
+							tag list
+						</div>
+					</div>
+				</div>
+
+			</div>
 		</div>
 	</div>
 	{{ dump(search) }}
