input type number

--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -75,13 +75,13 @@
 						<div class="col-4">
 							<div class="form-group label-floating">
 										<label class="control-label">Minimum</label>
-										<input name="firstName" class="form-control" placeholder="" type="text">
+										<input name="firstName" class="form-control" placeholder="" type="number">
 									</div>
 						</div>
 						<div class="col-4">
 							<div class="form-group label-floating">
 										<label class="control-label">Maximum</label>
-										<input name="firstName" class="form-control" placeholder="" type="text">
+										<input name="firstName" class="form-control" placeholder="" type="number">
 									</div>
 						</div>
 					</div>
@@ -95,13 +95,13 @@
 						<div class="col-4">
 							<div class="form-group label-floating">
 										<label class="control-label">Minimum</label>
-										<input name="firstName" class="form-control" placeholder="" type="text">
+										<input name="firstName" class="form-control" placeholder="" type="number">
 									</div>
 						</div>
 						<div class="col-4">
 							<div class="form-group label-floating">
 										<label class="control-label">Maximum</label>
-										<input name="firstName" class="form-control" placeholder="" type="text">
+										<input name="firstName" class="form-control" placeholder="" type="number">
 									</div>
 						</div>
 					</div>
