add/remove tags on front

--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -143,9 +143,7 @@
 							<button id="filter_add_tag" class="btn btn-primary">+</button>
 						</div>
 						<div class="col-3"></div>
-						<div class="col-9">
-							tag list
-						</div>
+						<div class="col-9" id="tag_list"></div>
 					</div>
 				</div>
 
