--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -4,38 +4,8 @@
 
 <div class="container">
 	<div class="row">
-		<div class="col-6">
-			<div class="ui-block p-3">
-				<!-- <div>
-					<form id="search_form">
-						<div class="form-group with-button">
-							<input class="Search_p" placeholder="Searsch here people or pages..." type="text">
-							<button href="#" class="loupe">
-								<svg class="olymp-magnifying-glass-icon">
-									<use xlink:href="/svg-icons/sprites/icons.svg#olymp-magnifying-glass-icon"></use>
-								</svg>
-							</button>
-						</div>
-					</form>
-				</div> -->
 
-				<div class="ui-block-title">
-					<h6 class="title">Search results</h6>
-				</div>
-					<ul class="notification-list">
-						{% for result in search %}
-							<li>
-								Login: {{result.login}}<br>
-								distance: {{result.distanse}}<br>
-								rating: {{result.rating}}<br>
-								Shared tags: {{result.numSharedTags}}<br>
-								age: {{result.age}}<br>
-							</li>
-						{% endfor %}
-					</ul>
-			</div>
-		</div>
-		<div class="col-6 ui-block">
+		<div class="col-12 col-md-6 ui-block">
 			<div class="row">
 				<div class="col-6 pt-3 pl-3">
 					<div class="form-group label-floating is-select ">
@@ -59,8 +29,8 @@
 
 				</div>
 				<div class="col-6 pt-3">
-					<button id="aply_filters" class="btn btn-primary mt-2">Aply filters</button>
 					<button id="filter_clear" class="btn btn-secondary mt-2">clear all filters</button>
+					<button id="aply_filters" class="btn btn-primary mt-2">Aply filters</button>
 				</div>
 			
 				<div class="col-12 text-center">
@@ -147,6 +117,39 @@
 					</div>
 				</div>
 
+			</div>
+		</div>
+
+
+		<div class="col-12 col-md-6">
+			<div class="ui-block p-3">
+				<!-- <div>
+					<form id="search_form">
+						<div class="form-group with-button">
+							<input class="Search_p" placeholder="Searsch here people or pages..." type="text">
+							<button href="#" class="loupe">
+								<svg class="olymp-magnifying-glass-icon">
+									<use xlink:href="/svg-icons/sprites/icons.svg#olymp-magnifying-glass-icon"></use>
+								</svg>
+							</button>
+						</div>
+					</form>
+				</div> -->
+
+				<div class="ui-block-title">
+					<h6 class="title">Search results</h6>
+				</div>
+					<ul class="notification-list">
+						{% for result in search %}
+							<li>
+								Login: {{result.login}}<br>
+								distance: {{result.distanse}}<br>
+								rating: {{result.rating}}<br>
+								Shared tags: {{result.numSharedTags}}<br>
+								age: {{result.age}}<br>
+							</li>
+						{% endfor %}
+					</ul>
 			</div>
 		</div>
 	</div>
