--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -140,7 +140,7 @@
 					<h6 class="title">Search results</h6>
 				</div>
 
-				<div class="row">
+				<div class="row" id="Search_res">
 					{% for result in search %}
 					<div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 col-xs-6">
 						<div class="ui-block" data-mh="friend-groups-item">
