--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -83,16 +83,10 @@
 						<div class="col-3 pt-3">
 							<h5>Location</h5>
 						</div>
-						<div class="col-4">
+						<div class="col-8">
 							<div class="form-group label-floating">
-										<label class="control-label">??</label>
-										<input name="firstName" class="form-control" placeholder="" type="text">
-									</div>
-						</div>
-						<div class="col-4">
-							<div class="form-group label-floating">
-										<label class="control-label">??</label>
-										<input name="firstName" class="form-control" placeholder="" type="text">
+										<label class="control-label">Address</label>
+										<input name="filter_location" class="form-control" placeholder="" type="text">
 									</div>
 						</div>
 					</div>
