--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -13,19 +13,10 @@
 
 
 	<div class="header-content-wrapper">
-		<form class="search-bar w-search notification-list friend-requests none">
+		<form class="search-bar w-search notification-list friend-requests">
 			<div class="form-group with-button">
 				<input class="Search_people" placeholder="Searsch here people or pages..." type="text">
 				<button href="#" class="loupe">
-					<svg class="olymp-magnifying-glass-icon">
-						<use xlink:href="/svg-icons/sprites/icons.svg#olymp-magnifying-glass-icon"></use>
-					</svg>
-				</button>
-			</div>
-		</form>
-		<form style="width:10px;" class="loupe search-bar w-search notification-list friend-requests">
-			<div class="form-group with-button">
-				<button>
 					<svg class="olymp-magnifying-glass-icon">
 						<use xlink:href="/svg-icons/sprites/icons.svg#olymp-magnifying-glass-icon"></use>
 					</svg>
