load page, max 20 result send

--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -134,8 +134,8 @@
 					<h6 class="title">Search results</h6>
 				</div>
 
-				<div class="row" id="Search_res">
-					{% for result in search %}
+				<div class="row pt-3" id="Search_res">
+					<!-- {% for result in search %}
 					<div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 col-xs-6">
 						<div class="ui-block" data-mh="friend-groups-item">
 							<div class="friend-item friend-groups">
@@ -183,7 +183,7 @@
 							</div>
 						</div>
 					</div>
-			{% endfor %}
+			{% endfor %} -->
 	</div>
 
 
@@ -200,7 +200,7 @@
 			</div>
 		</div>
 	</div>
-	{{ dump() }}
+	<!-- {{ dump() }} -->
 </div>
 
 <script src="/js/search_filters.js"></script>
