--- a/resources/views/login.twig
+++ b/resources/views/login.twig
@@ -28,7 +28,7 @@
                 <p>We are the best and biggest social network with 5 billion active users all around the world. Share you
                     thoughts, write blog posts, show your favourite music via Stopify, earn badges and much more!
                 </p>
-                <a href="#" class="btn btn-md btn-border c-white">Register Now!</a>
+                <a href="#" id="Register_Now" class="btn btn-md btn-border c-white">Register Now!</a>
             </div>
         </div>
 
@@ -45,7 +45,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#home" role="tab">
+                        <a class="nav-link" data-toggle="tab" id="reg_butt" href="#home" role="tab">
                             <svg class="olymp-register-icon"><use xlink:href="svg-icons/sprites/icons.svg#olymp-register-icon"></use></svg>
                         </a>
                     </li>
@@ -136,7 +136,7 @@
                                     <a href="#" class="btn btn-lg bg-twitter full-width btn-icon-left"><i class="fa fa-twitter" aria-hidden="true"></i>Login with Twitter</a>
 
 
-                                    <p>Don’t you have an account? <a href="#">Register Now!</a> it’s really simple and you can start enjoing all the benefits!</p>
+                                    <p>Don’t you have an account? <a href="#" id="Register_Now_s" >Register Now!</a> it’s really simple and you can start enjoing all the benefits!</p>
                                 </div>
                             </div>
                         </form>
@@ -147,6 +147,9 @@
             <!-- ... end Login-Registration Form  -->		</div>
     </div>
 </div>
+
+
+
 
 <script src="js/jquery-3.2.1.js"></script>
 <script src="js/perfect-scrollbar.js"></script>
@@ -162,7 +165,7 @@
 <script src="js/bootstrap.bundle.js"></script>
 
 
-
+<script src="js/login.js"></script>
 
 {#<!-- jQuery first, then Other JS. -->#}
 {#<script src="/js/jquery-3.2.1.js"></script>#}
