user photos and friends, redirect for 404

--- a/resources/views/friends.twig
+++ b/resources/views/friends.twig
@@ -15,12 +15,15 @@
 										<use xlink:href="svg-icons/sprites/icons.svg#olymp-three-dots-icon"></use>
 									</svg>
 									<ul class="more-dropdown">
-										<li>
-											<a href="#">Report Profile</a>
-										</li>
-										<li>
-											<a href="#">Block Profile</a>
-										</li>
+										{% if user.admin %}
+                                            <li>
+                                                <a href="#" data-type="block" data-id="{{ friend.profile.id }}">Block Profile</a>
+                                            </li>
+                                        {% else %}
+                                            <li>
+                                                <a href="#" data-type="report" data-id="{{ friend.profile.id }}">Report Profile</a>
+                                            </li>
+                                        {% endif %}
 									</ul>
 								</div>
 								<div class="friend-avatar">
@@ -59,4 +62,5 @@
 		</div>
 	</div>
 	<script src="/js/friend.js"></script>
+	<script src="/js/block_user.js"></script>
 {% endblock %}
