--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -111,6 +111,15 @@
 					</div>
 				</div>
 
+				<div class="col-12">
+					<div class="row">
+						<div class="col-1 col-md-2"></div>
+						<div class="col-10 col-md-8">
+							<button id="aply_filters_2" class="btn btn-primary mt-2 w-100">Aply filters</button>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
 
