--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -85,7 +85,7 @@
 						</div>
 						<div class="col-8">
 							<div class="form-group label-floating">
-										<label class="control-label">Address</label>
+										<label class="control-label">Country, city</label>
 										<input name="filter_location" class="form-control" placeholder="" type="text">
 									</div>
 						</div>
