left menu, header

--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -176,7 +176,7 @@
 						<svg class="olymp-chat---messages-icon">
 							<use xlink:href="/svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use>
 						</svg>
-						<div class="label-avatar bg-purple">322</div>
+						<div class="label-avatar bg-purple">{{ num_messages }}</div>
 					</div>
 				</a>
 			</li>
@@ -193,12 +193,9 @@
 			</li>
 
 			<li class="nav-item">
-				<a class="nav-link" data-toggle="tab" href="#search" role="tab">
+				<a class="nav-link" href="/search">
 					<svg class="olymp-magnifying-glass-icon">
 						<use xlink:href="/svg-icons/sprites/icons.svg#olymp-magnifying-glass-icon"></use>
-					</svg>
-					<svg class="olymp-close-icon">
-						<use xlink:href="/svg-icons/sprites/icons.svg#olymp-close-icon"></use>
 					</svg>
 				</a>
 			</li>
