--- a/resources/views/login.twig
+++ b/resources/views/login.twig
@@ -9,8 +9,6 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="css/main.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-
-    {#<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>#}
 </head>
 
 <body class="landing-page">
@@ -33,8 +31,6 @@
         </div>
 
         <div class="col-xl-5 col-lg-6 col-md-12 col-sm-12 col-xs-12">
-
-            <!-- Login-Registration Form  -->
 
             <div class="registration-login-form">
                 <!-- Nav tabs -->
@@ -144,7 +140,7 @@
                 </div>
             </div>
 
-            <!-- ... end Login-Registration Form  -->		</div>
+        </div>
     </div>
 </div>
 
@@ -160,30 +156,6 @@
 <script src="js/fullcalendar.js"></script>
 <script src="js/base-init.js"></script>
 <script src="js/bootstrap.bundle.js"></script>
-
-
-
-
-{#<!-- jQuery first, then Other JS. -->#}
-{#<script src="/js/jquery-3.2.1.js"></script>#}
-{#<script src="js/popper.min.js"></script>#}
-
-{#<!-- Js effects for material design. + Tooltips -->#}
-{#<script src="/js/material.min.js"></script>#}
-{#<!-- Helper scripts (Tabs, Equal height, Scrollbar, etc) -->#}
-{#<script src="js/perfect-scrollbar.js"></script>#}
-{#<script src="/js/theme-plugins.js"></script>#}
-{#<!-- Init functions -->#}
-{#<script src="/js/main.js"></script>#}
-{#<!-- Select / Sorting script -->#}
-{#<script src="/js/selectize.js"></script>#}
-{#<!-- Swiper / Sliders -->#}
-{#<script src="/js/swiper.jquery.js"></script>#}
-{#<!-- Datepicker input field script-->#}
-{#<script src="/js/moment.js"></script>#}
-{#<script src="/js/daterangepicker.js"></script>#}
-
-{#<script src="js/bootstrap.bundle.js"></script>#}
 
 </body>
 </html>
