add socket notif to mobile version

--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -148,7 +148,7 @@
 						<svg class="olymp-happy-face-icon">
 							<use xlink:href="/svg-icons/sprites/icons.svg#olymp-happy-face-icon"></use>
 						</svg>
-						<div class="label-avatar bg-blue">{{ num_requests }}</div>
+						<div id="friend_req_mob" class="label-avatar bg-blue">{{ num_requests }}</div>
 					</div>
 				</a>
 			</li>
@@ -159,7 +159,7 @@
 						<svg class="olymp-chat---messages-icon">
 							<use xlink:href="/svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use>
 						</svg>
-						<div class="label-avatar bg-purple">{{ num_messages }}</div>
+						<div  id="unreadMess_notif_mob" class="label-avatar bg-purple">{{ num_messages }}</div>
 					</div>
 				</a>
 			</li>
@@ -170,7 +170,7 @@
 						<svg class="olymp-thunder-icon">
 							<use xlink:href="/svg-icons/sprites/icons.svg#olymp-thunder-icon"></use>
 						</svg>
-						<div class="label-avatar bg-primary">{{ num_notifications }}</div>
+						<div id="notif_num_mob" class="label-avatar bg-primary">{{ num_notifications }}</div>
 					</div>
 				</a>
 			</li>
