--- a/resources/views/verify.twig
+++ b/resources/views/verify.twig
@@ -1,6 +1,3 @@
-unic template<br>
-send mail ...
-
 <style>
 
 	.coordinates {
@@ -26,25 +23,25 @@ send mail ...
 
 </style>
 
-<div class="container">
-	<div class="row">
-		<div class="col-12">
-			<div class="ui-block">
-				<div class="ui-block-title">
-					<h6 class="title">Verify Account</h6>
-					<ul class="notification-list friend-requests">
-						<li class="align-center no-requests">
-							<span>Don`t verify yet</span>
-						</li>
-					</ul>
+<div class="content-bg-wrap">
+	<div class="container">
+		<div class="row">
+			<div class="col-12">
+				<div class="ui-block">
+					<div class="ui-block-title">
+						<h6 class="title">Verify Account</h6>
+						<ul class="notification-list friend-requests">
+							<li class="align-center no-requests">
+								<span>Don`t verify yet</span>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
+		<p class="no-browser-support">Sorry, the Geolocation API isn't supported in Your browser.</p>
 	</div>
-	<p class="no-browser-support">Sorry, the Geolocation API isn't supported in Your browser.</p>
-	<p class="coordinates">Latitude: <b class="latitude">42</b> Longitude: <b class="longitude">32</b></p>
 </div>
-
 		<a href="/logout">
 			<span>Log Out</span>
 		</a>
