--- a/resources/views/layouts/sidebarLeft.twig
+++ b/resources/views/layouts/sidebarLeft.twig
@@ -34,6 +34,12 @@
                         <svg class="olymp-chat---messages left-menu-icon"  data-toggle="tooltip" data-placement="right"   data-original-title="chat"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-chat---messages-icon"></use></svg>
                     </a>
                 </li>
+
+                <li>
+                    <a href="/map">
+                    <svg class="olymp-star-icon left-menu-icon"  data-toggle="tooltip" data-placement="right"  data-original-title="MAP"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-star-icon"></use></svg>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
@@ -76,7 +82,13 @@
                         <span class="left-menu-title">Chat</span>
                     </a>
                 </li>
-
+                    <li>
+                        <a href="/map">
+                        <svg class="olymp-star-icon left-menu-icon"  data-toggle="tooltip" data-placement="right"  data-original-title="MAP"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-star-icon"></use></svg>
+                        
+                        <span class="left-menu-title">Interactive map</span>
+                        </a>
+                    </li>
 
             </ul>
 
@@ -149,6 +161,14 @@
                         </a>
                     </li>
                 {% endif %}
+
+                <li>
+                    <a href="/map">
+                    <svg class="olymp-star-icon left-menu-icon"  data-toggle="tooltip" data-placement="right"  data-original-title="MAP"><use xlink:href="/svg-icons/sprites/icons.svg#olymp-star-icon"></use></svg>
+                   
+                    <span class="left-menu-title">Interactive map</span>
+                     </a>
+                </li>
 
             </ul>
 
