--- a/resources/views/login.twig
+++ b/resources/views/login.twig
@@ -120,7 +120,7 @@
                                     </div>
 
                                     <div class="remember text-center">
-                                        <a href="#" class="forgot" style="float: inherit;">Forgot my Password</a>
+                                        <a id="pass_recovery" href="/forgotPass" class="forgot" style="float: inherit;">Forgot my Password</a>
                                     </div>
 
                                     <button  type="submit" class="btn btn-lg btn-primary full-width">Login</button>
@@ -143,9 +143,6 @@
         </div>
     </div>
 </div>
-
-
-
 
 <script src="js/jquery-3.2.1.js"></script>
 <script src="js/perfect-scrollbar.js"></script>
