--- a/resources/views/user_map.twig
+++ b/resources/views/user_map.twig
@@ -7,6 +7,7 @@
 		<div class="google-maps">
         	<div id="map_edit" class="map edit-map w-100 h-100" style="min-height: 50rem"></div>
         </div>
+        {{ dump() }}
 	</div>
 
 	<script src="/js/gmaps.js"></script>
