--- a/resources/views/layouts/header.twig
+++ b/resources/views/layouts/header.twig
@@ -73,7 +73,7 @@
 
 			<div class="author-page author vcard inline-items more">
 				<div class="author-thumb">
-					<img alt="author" src="img{{ user.img }}" style="width: 45px; height: 45px;" class="avatar">
+					<img alt="author" src="/img{{ user.img }}" style="width: 45px; height: 45px;" class="avatar">
 					<span class="icon-status online"></span>
 					<div class="more-dropdown more-with-triangle">
 						<div class="mCustomScrollbar" data-mcs-theme="dark">
