load more profiles in search

--- a/resources/views/search.twig
+++ b/resources/views/search.twig
@@ -131,8 +131,8 @@
 
 				<div class="row pt-3" id="Search_res">
 				</div>
-				<div class="">
-					<button class="btn btn-primary" id="btn_more">more</button>
+				<div class="w-100 text-center">
+					<button class="btn btn-primary m-auto" id="btn_more">more</button>
 				</div>
 			</div>
 		</div>
